cambio de la vista login de nuevo

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                 <h2>Inicio de Sesion</h2>
                 <form action="/inicioUsuario" method="post">
                     <div class="inputBx">
-                        <span>Nombres de Usuarios</span>
+                        <span>Nombre de Usuarios</span>
                         <input type="text" name="name" placeholder="Usuario" />   
                     </div>
                     <div class="inputBx">
